# ECL-pulic

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PATENT_NOTICE.md  PUBLIC_RELEASE_BOUNDARY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  TRANSFER_MANIFEST.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLAIM_SCOPE.md  CLOSURE_ENGINE.md  PUBLIC_RELEASE_SCOPE.md
examples/: run_closure_audit.py  run_native_ledger.py  run_prtp_demo.py
schemas/: ecl-closure-certificate-v1.schema.json
src/ecl/: __init__.py  closure_engine.py  native_ledger.py  prtp.py
tests/: test_closure_engine.py  test_native_ledger.py  test_prtp.py
tools/: verify_public_release.py
