[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecl-closure-framework"
version = "0.2.0"
description = "Advanced public research framework for closure-aware event certification and residue-aware ledgers"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Monty Dabas"}]
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
ecl-closure-audit = "ecl.closure_engine:main"
ecl-native-ledger = "ecl.native_ledger:main"
ecl-prtp-demo = "ecl.prtp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
